# fstreamEnc

./: CMakeLists.txt  README.md
src/: fstream_ext.h  fstream_ext_test.cc
